force-app/main/default/objects/SME_Offers__c/SME_Offers__c.object-meta.xml
<CustomObject>
    <description>Targeted Customer Engagement Campaign offers</description>
    <label>SME Offers</label>
    <nameField>
        <displayFormat>SME-{YY}-{MM}-{000000}</displayFormat>
        <label>SME Offers Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SME Offers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>