force-app/main/default/objects/SME_Offers__c/fields/Fulfillment_Process__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Process__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fulfillment Process</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>