force-app/main/default/objects/SME_Offers__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <description>Based on Perceived $ Value Impacted</description>
    <inlineHelpText>Perceived $ Value Impacted</inlineHelpText>
    <label>Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - High Impact</fullName>
            </value>
            <value>
                <fullName>2A - Medium</fullName>
            </value>
            <value>
                <fullName>2B - Medium</fullName>
            </value>
            <value>
                <fullName>3A - Low</fullName>
            </value>
            <value>
                <fullName>3B - Low</fullName>
            </value>
            <value>
                <fullName>4: Low</fullName>
            </value>
            <value>
                <fullName>Lvl 3 QBR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>