force-app/main/default/objects/SME_Offers__c/fields/Link_to_Product_Registration__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Product_Registration__c</fullName>
    <label>Link to Product Registration</label>
    <referenceTo>Product_Registration__c</referenceTo>
    <relationshipLabel>SME Offers</relationshipLabel>
    <relationshipName>SME_Offers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>