force-app/main/default/objects/SME_Offers__c/fields/Offer__c.field-meta.xml
<CustomField>
    <fullName>Offer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Offer Details</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>