force-app/main/default/objects/SME_Offers__c/fields/Offer_Chosen__c.field-meta.xml
<CustomField>
    <fullName>Offer_Chosen__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Offer Chosen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>